네트워크 연결 안됐을 때 해결

--- a/NowSaleAndroidApp/app/src/main/res/values/strings.xml
+++ b/NowSaleAndroidApp/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="navermap_client_id">jXpEGi6SmZR_dAOl54_S</string>
     <string name="kakao_app_key">921e789b9add89290d9136ad3f870e34</string>
+    <string name="please_connect_to_internet">네트워크 상태를\n확인해주세요!!</string>
     <string name="change_market_info">매장정보, 매장프로필 등\n매장 관련 정보는\n카카오톡 플러스친구 1:1문의와\n문자 및 전화를 통해\n수정이 가능합니다</string>
     <string name="activity_help">지금은 할인중은\n카카오톡을 통하여 고객센터를\n운영하고 있습니다\n\n1:1문의는 카카오톡을 통해서\n실시간으로 접수받고 있습니다</string>
     <string name="userInfoRule">
@@ -314,5 +315,20 @@
   ① “웹”과 이용자 간에 발생한 전자상거래 분쟁에 관한 소송은 제소 당시의 이용자의 주소에 의하고, 주소가 없는 경우에는 거소를 관할하는 지방법원의 전속관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가 분명하지 않거나 외국 거주자의 경우에는 민사소송법상의 관할법원에 제기합니다.\n
 
   ② “웹”과 이용자 간에 제기된 전자상거래 소송에는 한국법을 적용합니다.\n
+    </string>
+    <string name="forgetSaleStep1">
+        step1에서는 등록하시는 할인행사의 할인조건과 혜택을 작성할 수 있습니다.\n아래예시들을 참고하여 사장님 가게에 맞는 맞춤 할인행사를 등록해보세요!\n\n할인조건 : 5만원이상 결제시\n혜택 : 5천원 할인\n\n할인조건 : 첫방문시\n혜택 : 최대 20%할인\n\n할인조건 : 15:00~16:00 방문시\n혜택 : 아메리카노 3천원\n\n
+    </string>
+    <string name="forgetSaleStep2">
+        step2에서는 할인행사의 유효기간을 지정할 수 있습니다.\n유효기간 지정을 원하시는 사장님께서는 ’유효기간 지정’을 체크하신 후 유효기간을 입력해주시면 됩니다.\n유효기간이 지난 할인행사는 ‘진행중인 할인행사’목록에서 자동삭제됩니다.\n유효기간 지정을 원하지 않으시면 바로 ‘등록’을 눌러주세요!\n\n
+    </string>
+    <string name="forgetCouponStep1">
+        Step1에서는 발급하시는 쿠폰의 할인조건과 혜택을 작성할 수 있습니다.\n아래예시들을 참고하여 사장님 가게에 맞는 맞춤쿠폰을 발급해보세요!\n\n할인조건 : 선착순 고객 100분 대상\n혜택 : 신메뉴 무료증정\n\n할인조건 : 메뉴 2개이상 주문시\n혜택 : 소주 1병 증정\n\n
+    </string>
+    <string name="forgetCouponStep2">
+        step2에서는 발급하시는 쿠폰의 개수를 지정할 수 있습니다.\n쿠폰개수 제한을 원하시는 사장님께서는 ’쿠폰개수 제한’을 체크하신 후 쿠폰의 개수를 입력해주시면됩니다.\n제한된 개수만큼 모두 다운된 쿠폰은 ‘다운가능한 쿠폰’목록에서 자동삭제됩니다.\n쿠폰개수 제한을 원하지 않으시면 ‘다음’을 눌러 step3로 넘어가주세요!\n\n
+    </string>
+    <string name="forgetCouponStep3">
+        step3에서는 발급하시는 쿠폰의 유효기간을 지정할 수 있습니다.\n유효기간 지정을 원하시는 사장님께서는 ’유효기간 지정’을 체크하신 후 유효기간을 입력해주시면 됩니다.\n유효기간이 지난 쿠폰은 ‘다운가능한 쿠폰’목록에서 자동삭제됩니다.\n유효기간 지정을 원하지 않으시면 바로 ‘발급’을 눌러주세요!\n\n
     </string>
 </resources>
